RESOLVED FIXED145395
Photo Booth hangs under JSC::MachineThreads::tryCopyOtherThreadStacks
https://bugs.webkit.org/show_bug.cgi?id=145395
Summary Photo Booth hangs under JSC::MachineThreads::tryCopyOtherThreadStacks
Geoffrey Garen
Reported 2015-05-26 15:50:55 PDT
Photo Booth hangs under JSC::MachineThreads::tryCopyOtherThreadStacks
Attachments
Patch (1.39 KB, patch)
2015-05-26 15:51 PDT, Geoffrey Garen
no flags
Patch (1.65 KB, patch)
2015-05-26 15:53 PDT, Geoffrey Garen
mhahnenb: review+
Geoffrey Garen
Comment 1 2015-05-26 15:51:13 PDT
Geoffrey Garen
Comment 2 2015-05-26 15:51:35 PDT
Geoffrey Garen
Comment 3 2015-05-26 15:53:06 PDT
Mark Hahnenberg
Comment 4 2015-05-26 15:59:01 PDT
Comment on attachment 253752 [details] Patch lol r=me
Geoffrey Garen
Comment 5 2015-05-26 15:59:51 PDT
Note You need to log in before you can comment on or make changes to this bug.