Photo Booth hangs under JSC::MachineThreads::tryCopyOtherThreadStacks https://bugs.webkit.org/show_bug.cgi?id=145395

Reviewed by Mark Hahnenberg.

No test case because we already have --threaded mode, which runs lots of
parallel GC, but it (and the original in-app test case) can't reproduce
this bug.

* heap/MachineStackMarker.cpp:
(JSC::MachineThreads::tryCopyOtherThreadStacks): Use a lock to prevent
two threads from mutually suspending each other.


Canonical link: https://commits.webkit.org/163400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184884 268f45cc-cd09-0410-ab3c-d52691b4dbfc